Fixed responsivness on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@
     font-family: Ubuntu;
 }
 
+b {
+    font-family: 'Titillium Web', sans-serif;
+}
 .container-fluid img{
     margin-left: auto;
     margin-right: auto;
